--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Titulo - Sistema de Ponto</title>
+    <title>Versioning exercise</title>
 </head>
 
 <body>
     <main>
-        <h1>Test</h1>
-        <p>paragrafo</p>
-        <p>paragrafo2</p>
-        <p>paragrafo3</p>
+        <h1>Main title</h1>
+        <p>Sometimes you heal.</p>
+        <p>Sometimes you deal.</p>
+        <p>Keep moving.</p>
     </main>
 
 </body>
